main/default/objects/Sanction_Status__c/Sanction_Status__c.object-meta.xml
<CustomObject>
    <label>Sanction Status</label>
    <nameField>
        <displayFormat>SS-{00000}</displayFormat>
        <label>Sanction Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sanction Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>