main/default/objects/Sanction_Status__c/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <label>Decline Reason</label>
    <type>TextArea</type>
</CustomField>