main/default/objects/Sanction_Status__c/fields/Review_Note__c.field-meta.xml
<CustomField>
    <fullName>Review_Note__c</fullName>
    <label>Review Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>