main/default/objects/Sanction_Status__c/fields/Review_Requested__c.field-meta.xml
<CustomField>
    <fullName>Review_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Review Requested</label>
    <type>Checkbox</type>
</CustomField>