main/default/objects/Sanction_Status__c/fields/Review_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Review_Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sanction_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>