main/default/objects/Sanction_Status__c/fields/Sanction_Status__c.field-meta.xml
<CustomField>
    <fullName>Sanction_Status__c</fullName>
    <label>Sanction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Potential Match</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>