main/default/objects/Sanction_Status__c/fields/SearchId__c.field-meta.xml
<CustomField>
    <fullName>SearchId__c</fullName>
    <label>SearchId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>